@@ -1,21 +1,26 @@
-/*	FRAME3DD: Static and dynamic structural analysis of 2D & 3D frames and trusses
-	Copyright (C) 1992-2009  Henri P. Gavin
+/*
+  FRAME3DD:
+  Static and dynamic structural analysis of 2D and 3D frames and trusses with
+  elastic and geometric stiffness.
+  ---------------------------------------------------------------------------
+  http://frame3dd.sourceforge.net/
+  ---------------------------------------------------------------------------
+ Copyright (C) 1992-2009  Henri P. Gavin
 
-    This program is free software: you can redistribute it and/or modify
-    it under the terms of the GNU General Public License as published by
-    the Free Software Foundation, either version 3 of the License, or
-    (at your option) any later version.
-
-    This program is distributed in the hope that it will be useful,
-    but WITHOUT ANY WARRANTY; without even the implied warranty of
-    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-    GNU General Public License for more details.
-
-    You should have received a copy of the GNU General Public License
-    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-*//**
-	@file
-	LU decomposition
+ FRAME3DD is free software: you can redistribute it and/or modify
+ it under the terms of the GNU General Public License as published by
+ the Free Software Foundation, either version 3 of the License, or
+ (at your option) any later version.
+ 
+ FRAME3DD is distributed in the hope that it will be useful,
+ but WITHOUT ANY WARRANTY; without even the implied warranty of
+ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ GNU General Public License for more details.
+ 
+ You should have received a copy of the GNU General Public License
+ along with FRAME3DD.  If not, see <http://www.gnu.org/licenses/>.
+ *//** @file
+        Routines to perform L U - decomposition 
 */
 
 #ifndef FRAME_LU_DCMP_H
